--- a/Pear/Controllers/Profiles/Full Profile Scroll/FullProfileScrollViewController.storyboard
+++ b/Pear/Controllers/Profiles/Full Profile Scroll/FullProfileScrollViewController.storyboard
@@ -18,26 +18,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lb2-5H-MMS" userLabel="Header Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eG-b0-BBl" userLabel="Back Button">
+                                        <rect key="frame" x="12" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Z02-1Z-ekM"/>
+                                            <constraint firstAttribute="width" constant="40" id="ZYh-A3-Osa"/>
+                                        </constraints>
+                                        <state key="normal" image="onboarding-back-button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="CH6-I7-7PQ"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jst-Tn-iZQ" userLabel="Progress View">
+                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="w9x-mf-lH6"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="2eG-b0-BBl" firstAttribute="leading" secondItem="lb2-5H-MMS" secondAttribute="leading" constant="12" id="6hc-HE-xyR"/>
+                                    <constraint firstItem="Jst-Tn-iZQ" firstAttribute="leading" secondItem="lb2-5H-MMS" secondAttribute="leading" id="8sG-uV-Aj5"/>
+                                    <constraint firstAttribute="height" constant="50" id="MYw-Fe-fYx"/>
+                                    <constraint firstItem="Jst-Tn-iZQ" firstAttribute="width" secondItem="lb2-5H-MMS" secondAttribute="width" id="WFM-nM-gj8"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jst-Tn-iZQ" secondAttribute="bottom" id="iIU-eZ-hbX"/>
+                                    <constraint firstItem="2eG-b0-BBl" firstAttribute="centerY" secondItem="lb2-5H-MMS" secondAttribute="centerY" id="u2o-Xj-JrU"/>
+                                </constraints>
+                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FuM-UC-gNb">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGB-DF-SiN">
-                                <rect key="frame" x="16" y="36" width="34" height="30"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="backButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="KYf-xV-sbQ"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="FuM-UC-gNb" firstAttribute="centerY" secondItem="yBm-A3-ChV" secondAttribute="centerY" id="8NM-am-hhK"/>
-                            <constraint firstItem="FuM-UC-gNb" firstAttribute="top" secondItem="yBm-A3-ChV" secondAttribute="top" id="Em5-Bh-nvO"/>
+                            <constraint firstItem="lb2-5H-MMS" firstAttribute="trailing" secondItem="yBm-A3-ChV" secondAttribute="trailing" id="Ct5-QS-gy4"/>
+                            <constraint firstItem="lb2-5H-MMS" firstAttribute="leading" secondItem="yBm-A3-ChV" secondAttribute="leading" id="Xh3-Xi-7Vx"/>
+                            <constraint firstItem="lb2-5H-MMS" firstAttribute="top" secondItem="yBm-A3-ChV" secondAttribute="top" id="Xkv-Pn-60S"/>
                             <constraint firstItem="FuM-UC-gNb" firstAttribute="centerX" secondItem="yBm-A3-ChV" secondAttribute="centerX" id="bbV-Yh-nUD"/>
-                            <constraint firstItem="iGB-DF-SiN" firstAttribute="leading" secondItem="yBm-A3-ChV" secondAttribute="leading" constant="16" id="c0R-Kt-7Iu"/>
                             <constraint firstItem="FuM-UC-gNb" firstAttribute="leading" secondItem="yBm-A3-ChV" secondAttribute="leading" id="jTv-a4-nud"/>
+                            <constraint firstItem="FuM-UC-gNb" firstAttribute="top" secondItem="lb2-5H-MMS" secondAttribute="bottom" id="mXF-gt-iS5"/>
                             <constraint firstItem="yBm-A3-ChV" firstAttribute="bottom" secondItem="FuM-UC-gNb" secondAttribute="bottom" id="mkB-i0-1AN"/>
-                            <constraint firstItem="iGB-DF-SiN" firstAttribute="top" secondItem="yBm-A3-ChV" secondAttribute="top" constant="16" id="psp-eR-22D"/>
                             <constraint firstItem="yBm-A3-ChV" firstAttribute="trailing" secondItem="FuM-UC-gNb" secondAttribute="trailing" id="thB-Be-c6P"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yBm-A3-ChV"/>
@@ -51,4 +78,7 @@
             <point key="canvasLocation" x="253.59999999999999" y="81.409295352323838"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="onboarding-back-button" width="30" height="30"/>
+    </resources>
 </document>
