Added tracking of profiles

--- a/Pear/Controllers/Temporary Tabs/MeTabViewController.storyboard
+++ b/Pear/Controllers/Temporary Tabs/MeTabViewController.storyboard
@@ -29,22 +29,97 @@
                                     <action selector="requestProfileButtonClicked:" destination="Epp-Ix-2Bq" eventType="touchUpInside" id="4E1-Mx-mlk"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jm5-Sd-1i9" userLabel="Header Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2N-Iu-8ZE" userLabel="Progress View">
+                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="XHe-5C-CTM"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profiles Made for You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgu-uw-QAM">
+                                        <rect key="frame" x="106" y="14.5" width="163" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="pgu-uw-QAM" firstAttribute="centerX" secondItem="jm5-Sd-1i9" secondAttribute="centerX" id="28j-sL-W8t"/>
+                                    <constraint firstAttribute="height" constant="50" id="Gng-0r-YjS"/>
+                                    <constraint firstAttribute="bottom" secondItem="l2N-Iu-8ZE" secondAttribute="bottom" id="JJ3-jr-oHz"/>
+                                    <constraint firstItem="pgu-uw-QAM" firstAttribute="centerY" secondItem="jm5-Sd-1i9" secondAttribute="centerY" id="XWO-lz-uD3"/>
+                                    <constraint firstItem="l2N-Iu-8ZE" firstAttribute="leading" secondItem="jm5-Sd-1i9" secondAttribute="leading" id="Zuq-nh-DH5"/>
+                                    <constraint firstItem="l2N-Iu-8ZE" firstAttribute="width" secondItem="jm5-Sd-1i9" secondAttribute="width" id="rwd-PA-9xM"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xOE-Pd-bIj">
+                                <rect key="frame" x="0.0" y="70" width="375" height="517"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileMadeByTVC" rowHeight="106" id="Hhe-4y-m0V" customClass="ProfileMadeByTableViewCell" customModule="Pear" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="106"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hhe-4y-m0V" id="nPB-EU-Dri">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="105.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4x4-yo-IBX">
+                                                    <rect key="frame" x="20" y="0.0" width="105.5" height="105.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="4x4-yo-IBX" secondAttribute="height" multiplier="1:1" id="cvF-aQ-Aaz"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Made by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4I-m3-U2P">
+                                                    <rect key="frame" x="135.5" y="21" width="119" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="4x4-yo-IBX" secondAttribute="bottom" id="HQt-1A-ZIM"/>
+                                                <constraint firstItem="4x4-yo-IBX" firstAttribute="top" secondItem="nPB-EU-Dri" secondAttribute="top" id="Pvi-Hl-KFj"/>
+                                                <constraint firstItem="4x4-yo-IBX" firstAttribute="leading" secondItem="nPB-EU-Dri" secondAttribute="leading" constant="20" id="WAG-XP-Jqh"/>
+                                                <constraint firstItem="S4I-m3-U2P" firstAttribute="leading" secondItem="4x4-yo-IBX" secondAttribute="trailing" constant="10" id="YBj-Yf-Xal"/>
+                                                <constraint firstItem="S4I-m3-U2P" firstAttribute="top" secondItem="nPB-EU-Dri" secondAttribute="topMargin" constant="10" id="uMB-Lc-H84"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="profileFirstImageView" destination="4x4-yo-IBX" id="NhK-YC-5fK"/>
+                                            <outlet property="subtextLabel" destination="S4I-m3-U2P" id="wst-Nm-kVw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="zV9-fG-U7M" firstAttribute="top" secondItem="xOE-Pd-bIj" secondAttribute="bottom" constant="10" id="0sZ-1h-Z41"/>
+                            <constraint firstItem="xOE-Pd-bIj" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="C8P-0x-1dx"/>
                             <constraint firstItem="YBi-ol-4bB" firstAttribute="bottom" secondItem="zV9-fG-U7M" secondAttribute="bottom" constant="20" id="IY5-NM-KG3"/>
+                            <constraint firstItem="jm5-Sd-1i9" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="If6-cb-PdA"/>
+                            <constraint firstItem="xOE-Pd-bIj" firstAttribute="top" secondItem="jm5-Sd-1i9" secondAttribute="bottom" id="NjF-KE-ar5"/>
                             <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="zV9-fG-U7M" secondAttribute="trailing" constant="20" id="PF9-gm-mls"/>
+                            <constraint firstItem="jm5-Sd-1i9" firstAttribute="trailing" secondItem="YBi-ol-4bB" secondAttribute="trailing" id="YEh-Ef-5eY"/>
                             <constraint firstItem="zV9-fG-U7M" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" constant="20" id="YpU-Sx-ob3"/>
+                            <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="xOE-Pd-bIj" secondAttribute="trailing" id="bJX-R5-rXh"/>
+                            <constraint firstItem="jm5-Sd-1i9" firstAttribute="top" secondItem="YBi-ol-4bB" secondAttribute="top" id="m7u-GH-p0G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YBi-ol-4bB"/>
                     </view>
                     <connections>
                         <outlet property="requestProfileButton" destination="zV9-fG-U7M" id="Vot-Sq-N92"/>
+                        <outlet property="tableView" destination="xOE-Pd-bIj" id="uSC-aY-Bjw"/>
+                        <outlet property="titleLabel" destination="pgu-uw-QAM" id="ydr-nT-DAS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v2k-eC-OOs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="630" y="-242"/>
+            <point key="canvasLocation" x="629.60000000000002" y="-242.42878560719643"/>
         </scene>
     </scenes>
 </document>
