--- a/Pear/Controllers/Temporary Tabs/FriendsTabViewController.storyboard
+++ b/Pear/Controllers/Temporary Tabs/FriendsTabViewController.storyboard
@@ -39,8 +39,8 @@
                                             <constraint firstAttribute="height" constant="1" id="2sN-yP-NX2"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profiles Made for You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOd-wP-66I">
-                                        <rect key="frame" x="106" y="14.5" width="163" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profiles Made by You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOd-wP-66I">
+                                        <rect key="frame" x="107" y="14.5" width="161" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
